<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_rooms"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_rooms" />
    <item
        android:id="@+id/nav_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_gallery" />
    <item
        android:id="@+id/nav_reviews"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_reviews" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/nav_contact" />
</menu>

